<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="appewtc.masterung.smileplant.MainActivity"
    android:background="@drawable/wall7">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:textSize="@dimen/h1"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_weight="1"
                android:src="@drawable/blue" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView2"
                android:layout_weight="1"
                android:src="@drawable/gray" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hub1"
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:gravity="center_horizontal"
                android:textColor="@color/text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hub2"
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:gravity="center_horizontal"
                android:textColor="@color/text" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/icon" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView3"
                android:layout_weight="1"
                android:src="@drawable/green" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView4"
                android:layout_weight="1"
                android:src="@drawable/orange" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hub3"
                android:id="@+id/textView4"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:gravity="center_horizontal"
                android:textColor="@color/text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hub4"
                android:id="@+id/textView5"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:gravity="center_horizontal"
                android:textColor="@color/text" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
